# comemory

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  deny.toml  justfile  lefthook.yml  pyproject.toml  release-plz.toml  typos.toml
.cargo/: config.toml  mutants.toml
.claude/: claudness.config.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: review-and-commit.md
.claude/hooks/: session-end.sh
.config/: nextest.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude-mention.yml  code-review.yml  codeql.yml  mutation.yml  release-finalize.yml  release-plz.yml  release.yml  secret-scan.yml  test.yml
benches/: common.rs  graph.rs  indexing.rs  retrieval.rs  save.rs  store.rs
benches/common/: corpus.rs  gitrepo.rs  vectors.rs
docs/: README.md  architecture.md  build-perf.md  central-knowledge-rag.md  cli-reference.md  configuration.md  getting-started.md  graph-viewer.md  qwick-rag-business-case.md  qwick-rag-exec-brief.md  qwick-rag-mvp-spec.md  qwick-rag-risk-compliance-cost.md  release.md
docs/bench/: README.md
docs/guides/: auto-reindex.md  byo-vectors.md  linking-code-to-memories.md  prune-and-gc.md  ranking-and-eval.md  serve-web.md
frontend/: app.js  index.html  styles.css
hooks/: hooks.json
integrations/claude-code/: README.md
keys/: README.md
scripts/: bench.sh  build-perf.sh  changelog-draft.sh  check-all.sh  cli-docs-check.sh  comemory-embed.sh  coverage-check.sh  curate-release-notes.sh  deny-check.sh  dup-check.sh  e2e-test.sh  e2e.sh  eval-check.sh  fmt-check.sh  fmt-fix.sh  install.sh  lint-check.sh  machete-check.sh  mcp-server.sh  module-size-check.sh  mutation-check.sh  no-bypass-check.sh  post-compact.sh  pre-compact.sh  regen-cli-docs.sh  session-start.sh  sign-release.sh  test-placement-check.sh  test-run.sh  tests-mirror-check.sh  type-check.sh  typos-check.sh  validate-release.sh  web-build.sh
scripts/lib/: common.sh  perf.sh
skills/memory/: SKILL.md
src/: errors.rs  git_utils.rs  lib.rs  main.rs  prelude.rs  simhash.rs
src/ast/: chunk.rs  extractor.rs  languages.rs  mod.rs  pattern.rs  pattern_cache.rs
src/cli/: ast.rs  bandit.rs  completions.rs  conflicts.rs  context.rs  delete.rs  doctor.rs  embedding_input.rs  eval.rs  feedback.rs  gc.rs  graph.rs  graph_serve.rs  index.rs  index_code.rs  ingest_code.rs  install_hooks.rs  lazy_reindex.rs  list.rs  memory_for.rs  mine.rs  mod.rs  pagination.rs  prune.rs  rebuild.rs  ref_args.rs  save.rs  search.rs  search_code.rs  serve.rs  supersedes.rs  symbol.rs  tui.rs  tune.rs  walk.rs
src/config/: defaults.rs  env.rs  file.rs  learning.rs  mod.rs  paths.rs  validate.rs
src/embed/: mod.rs
src/eval/: bandit.rs  bandit_rng.rs  golden.rs  metrics.rs  mine.rs  mod.rs  runner.rs  tune.rs
src/graph/: coactivate.rs  cochange.rs  cross_link.rs  edges.rs  imports.rs  materialize.rs  mod.rs  pagerank.rs  query.rs  schema.rs  search_edit.rs  upsert.rs
src/index/: code_index.rs  embedder.rs  fts.rs  memory_index.rs  mod.rs  schema.rs
src/memory/: frontmatter.rs  id.rs  mod.rs  references.rs  slug.rs  store.rs
src/output/: context.rs  graph.rs  graph_template.html  json.rs  mod.rs  page.rs  prune.rs  search.rs  search_code.rs  tty.rs
src/prune/: low_value.rs  mod.rs  orphans.rs  stale_code.rs
src/qwick_memory/: __init__.py  __main__.py  cli.py  config.py  errors.py  git_utils.py  index.py  memory.py  search.py  server.py  stats.py
src/qwick_rag/: __init__.py  __main__.py  cli.py  config.py  errors.py  git_utils.py  index.py  memory.py  search.py  server.py
src/retrieval/: bundle.rs  code_prior.rs  code_ref_collect.rs  code_ref_fetch.rs  code_ref_status.rs  code_rerank.rs  code_route.rs  code_search.rs  corrective.rs  diversify.rs  fts.rs  fuse.rs  hybrid.rs  mod.rs  pipeline.rs  rank.rs  rerank.rs  router.rs  score.rs
src/serve/: assets.rs  dto.rs  error.rs  fileio.rs  handlers.rs  mod.rs  repo_root.rs  router.rs  search.rs  security.rs  state.rs
src/stats/: code_feedback.rs  feedback.rs  mod.rs  sqlite.rs
src/store/: code_ref.rs  code_row.rs  connection.rs  embed.rs  fts.rs  memory_list.rs  memory_meta.rs  memory_row.rs  migrate.rs  mod.rs  schema.rs  vector.rs
src/tui/: app.rs  embed.rs  event.rs  mod.rs  preview.rs  search.rs  terminal.rs  worker.rs
tests/: ast.rs  ast__chunk.rs  ast__extractor.rs  ast__languages.rs  ast__pattern.rs  ast__pattern_cache.rs  cli.rs  cli__ast.rs  cli__bandit.rs  cli__context.rs  cli__context_2.rs  cli__delete.rs  cli__doctor.rs  cli__eval.rs  cli__feedback.rs  cli__feedback_2.rs  cli__graph.rs  cli__graph_2.rs  cli__index_code.rs  cli__index_code_2.rs  cli__ingest_code.rs  cli__ingest_code_2.rs  cli__lazy_reindex.rs  cli__list.rs  cli__mine.rs  cli__pagination.rs  cli__prune.rs  cli__prune_2.rs  cli__rebuild.rs  cli__rebuild_2.rs  cli__ref_args.rs  cli__save.rs  cli__save_2.rs  cli__search.rs  cli__search_code.rs  cli__search_code_2.rs  cli__serve.rs  cli__tui.rs  cli_completions.rs  cli_help_examples.rs  (+114 more)
tests/ast/: chunk.rs  extractor.rs  languages.rs  pattern.rs
tests/cli/: context.rs  context_fused.rs  delete.rs  doctor.rs  feedback.rs  gc.rs  graph.rs  graph_serve.rs  index_code.rs  index_rebuild.rs  ingest_code.rs  mine.rs  prune.rs  rebuild.rs  save.rs  save_embed.rs  save_graph_failure.rs  save_no_index.rs  search.rs  search_code.rs  search_fused.rs  serve.rs  tune.rs
tests/common/: cli_feedback_support.rs  cli_ingest_code_support.rs  cli_prune_support.rs  cli_rebuild_support.rs  cli_save_support.rs  code_rerank_support.rs  code_seed.rs  corpus.rs  git_commit.rs  git_repo.rs  git_sample.rs  git_setup.rs  graph_fixture.rs  runner.rs  vectors.rs
tests/config/: env.rs  file.rs  paths.rs  validate.rs
tests/eval/: golden.rs  mine.rs  runner.rs  tune.rs
tests/golden/: floor.toml  memory.yml  mutant-baseline.md
tests/graph/: cochange.rs  cross_link.rs  edges.rs  imports.rs  materialize.rs  query.rs  schema.rs  upsert.rs
tests/index/: code_index.rs  embedder.rs  (+3 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+188 files in other folders)
