[package]
name = "qwick-memory"
version = "0.1.0"
edition = "2021"
description = "Agentic dev memory + code-aware semantic search via a two-layer property graph."
license = "MIT"
repository = "https://github.com/SidegigLLC/qwick-memory"
rust-version = "1.95"

[[bin]]
name = "qwick-memory"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
arrow-array = "58"
arrow-schema = "58"
clap = { version = "4", features = ["derive", "env"] }
fastembed = "4"
futures = "0.3"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
ignore = "0.4"
kuzu = "0.7"
lancedb = "0.29"
once_cell = "1"
owo-colors = "4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

# url 2.5.8 was published with a duplicate Debug impl on `Url` that fails to
# compile under recent rustc; pin transitive dep to last good release.
url = "=2.5.7"

[dependencies.ast-grep-core]
version = "0.38"

# ast-grep-language provides the per-language `Language` trait impls (Rust,
# Python, TypeScript, JavaScript, ...) that pair with ast-grep-core. The
# plan pinned 0.30, but the 0.30 line transitively pulls
# `tree-sitter-javascript 0.21.3`, which pins `cc ~1.0.90` — irreconcilable
# with `aws-lc-sys` in lancedb's transitive graph. 0.38.x switched to the
# 0.23+ parser line that uses `tree-sitter-language` and the modern `cc`,
# so both stacks compose.
[dependencies.ast-grep-language]
version = "0.38"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json", "yaml"] }
predicates = "3"
proptest = "1"
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256

[profile.release-quick]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = "none"

# Deps reserved for Tasks 4–22 of the Rust rewrite plan. cargo-machete flags
# them as "unused" until those tasks land; whitelist them here so the dup-check
# gate stays green during the early build-out.
[package.metadata.cargo-machete]
ignored = [
  "ast-grep-core", "ast-grep-language", "clap", "fastembed", "git2", "ignore", "kuzu", "lancedb",
  "once_cell", "owo-colors", "rusqlite", "serde",
  "sha2", "time", "tokio", "walkdir",
  "anyhow", "tracing",
  # url is a transitive-version pin (see comment above the [dependencies.url] entry).
  "url",
]

# cargo-dist configuration. qwick-memory is a single-package crate (no [workspace]),
# so the metadata table lives under [package.metadata.dist] rather than
# [workspace.metadata.dist]. cargo-dist 0.22.x still recognises both spellings.
#
# When a tag matching `v*` is pushed, the GitHub workflow in
# `.github/workflows/release.yml` builds prebuilt binaries for the targets
# listed below and publishes a shell installer + Homebrew formula to the
# `SidegigLLC/homebrew-tap` repository.
#
# Docs: https://opensource.axo.dev/cargo-dist/book/
[package.metadata.dist]
cargo-dist-version = "0.22.1"
ci = ["github"]
installers = ["shell", "homebrew"]
tap = "SidegigLLC/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]
# Use GitHub Releases as the artifact host; cargo-dist uploads the tarballs
# and updates the Homebrew tap formula in the same workflow run.
hosting = ["github"]
# Pull requests get a dry-run plan posted as a comment, but no artifacts are
# uploaded until the matching `v*` tag is pushed.
pr-run-mode = "plan"
