[package]
name = "comemory"
version = "0.7.0"
edition = "2021"
description = "Agentic dev memory + code-aware semantic search via a two-layer property graph."
license = "MIT"
repository = "https://github.com/Falconiere/comemory"
homepage = "https://github.com/Falconiere/comemory"
rust-version = "1.95"

[[bin]]
name = "comemory"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
futures = "0.3"
git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2"] }
ignore = "0.4"
# Direct dep on the raw SQLite bindings for the FTS5 tokenizer FFI in
# src/store/tokenizer/ffi.rs. Already transitive via rusqlite's `bundled`
# feature; keep the version line in sync with the rusqlite lock (0.30.x).
libsqlite3-sys = "0.30"
once_cell = "1"
owo-colors = "4"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "load_extension", "vtab", "blob"] }
rust-embed = { version = "8", features = ["compression"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
siphasher = "1"
sqlite-vec = "0.1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

# url 2.5.8 was published with a duplicate Debug impl on `Url` that fails to
# compile under recent rustc; pin transitive dep to last good release.
url = "=2.5.7"
unicode-normalization = "0.1"

[dependencies.ast-grep-core]
version = "0.38"

# ast-grep-language provides the per-language `Language` trait impls (Rust,
# Python, TypeScript, JavaScript, Go) that pair with ast-grep-core. We pin
# 0.38.x because the 0.30 line transitively pulls `tree-sitter-javascript
# 0.21.3`, which pins `cc ~1.0.90` — irreconcilable with `aws-lc-sys` in
# lancedb's transitive graph. 0.38.x switched to the 0.23+ parser line that
# uses `tree-sitter-language` and the modern `cc`, so both stacks compose.
#
# 0.38.x exposes the per-tree-sitter feature flags (`tree-sitter-rust`,
# `tree-sitter-python`, etc.), but the per-parser dispatch in
# `ast-grep-language/src/parsers.rs` (`into_lang!` / `into_napi_lang!`)
# only enables real parser construction when one of the umbrella features
# (`builtin-parser` or `napi-lang`) is on — without an umbrella, every
# `language_*()` call stubs to `unimplemented!()`. The comemory-level
# language gate in `src/ast/languages.rs` is therefore where we cap the
# supported set to rust/typescript/javascript/python/go even though the
# crate still compiles the full parser table.
[dependencies.ast-grep-language]
version = "0.38"
default-features = false
# `builtin-parser` is the umbrella feature that wires each per-parser flag
# into the actual `language_*()` dispatch (see CLAUDE.md note on
# `into_lang!` / `into_napi_lang!`). Without it every `language_*` call stubs
# to `unimplemented!()`. The per-parser features still narrow which
# tree-sitter parsers get linked: only rust/typescript/javascript/python/go.
features = [
  "builtin-parser",
  "tree-sitter-rust",
  "tree-sitter-typescript",
  "tree-sitter-javascript",
  "tree-sitter-python",
  "tree-sitter-go",
]

[build-dependencies]
cc = "1"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", default-features = false, features = ["html_reports", "async_tokio"] }
insta = { version = "1", features = ["json", "yaml"] }
predicates = "3"
proptest = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
tempfile = "3"
# Tests construct `OffsetDateTime` values to drive the query-id round-trip
# (`stats::feedback::generate_query_id`); same version line as the main dep.
time = { version = "0.3", features = ["macros"] }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["signal"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256

[profile.release-quick]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = "none"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Deps reserved for Tasks 4–22 of the Rust rewrite plan. cargo-machete flags
# them as "unused" until those tasks land; whitelist them here so the dup-check
# gate stays green during the early build-out.
[package.metadata.cargo-machete]
ignored = [
  "ast-grep-core", "ast-grep-language", "clap", "git2", "ignore",
  "once_cell", "owo-colors", "rusqlite", "serde",
  "sha2", "siphasher", "time", "tokio", "walkdir",
  "anyhow", "tracing",
  # url is a transitive-version pin (see comment above the [dependencies.url] entry).
  "url",
]

# Single-member workspace so cargo-dist can read its workspace-only fields
# (cargo-dist-version, ci, pr-run-mode, hosting). cargo-dist 0.22+ rejects
# these fields when they live under [package.metadata.dist].
[workspace]
members = ["."]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "Falconiere/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Where to host releases
hosting = "github"
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
publish-prereleases = false
allow-dirty = ["ci"]
