[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwick-memory"
version = "0.1.0"
description = "Centralized RAG memory for multiple repositories"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "lancedb>=0.30",
    "fastembed>=0.7",
    "python-frontmatter>=1.1",
    "typer[all]>=0.12",
    "rich>=13",
    "mcp>=1.2",
]

[project.scripts]
qwick-memory = "qwick_memory.cli:app"
qwick-memory-server = "qwick_memory.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qwick_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
indent-width = 2
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
